<resources>
    <string name="app_name" translatable="false">Horoscope</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="facebook_application_id" translatable="false">341268799988874</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb341268799988874</string>

    <string name="Compatibility">Compatibility</string>
    <string name="SetDefault">Set Default</string>
    <string name="Language">Language</string>
    <string name="LogOut">Logout</string>
    <string name="WriteToDeveloper">Write to Developer</string>
    <string name="SendFeedback">Send Feedback</string>
    <string name="Help">Help</string>
    <string name="Aries">Aries</string>
    <string name="Taurus">Taurus</string>
    <string name="Gemini">Gemini</string>
    <string name="Cancer">Cancer</string>
    <string name="Leo">Leo</string>
    <string name="Virgo">Virgo</string>
    <string name="Libra">Libra</string>
    <string name="Scorpio">Scorpio</string>
    <string name="Sagittarius">Sagittarius</string>
    <string name="Capricorn">Capricorn</string>
    <string name="Aquarius">Aquarius</string>
    <string name="Pisces">Pisces</string>
    <string name="ShowCompatibility">Show Compatibility</string>
    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="Month">Month</string>
    <string name="Week">Week</string>
    <string name="Year">Year</string>

    <string-array name="Zodiacs">
        <item>@string/Aries</item>
        <item>@string/Taurus</item>
        <item>@string/Gemini</item>
        <item>@string/Cancer</item>
        <item>@string/Leo</item>
        <item>@string/Virgo</item>
        <item>@string/Libra</item>
        <item>@string/Scorpio</item>
        <item>@string/Sagittarius</item>
        <item>@string/Capricorn</item>
        <item>@string/Aquarius</item>
        <item>@string/Pisces</item>
    </string-array>

    <string-array name="date">
        <item>@string/Yesterday</item>
        <item>@string/Today</item>
        <item>@string/Tomorrow</item>
        <item>@string/Week</item>
        <item>@string/Month</item>
        <item>@string/Year</item>

    </string-array>

</resources>
